--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,13 +1,16 @@
 
 /* container of game have 3 div  */
-.container {   
+.audio {
+	display: block;
+}
+.container {
 	height: 400px;
 	background: #fff;
 	width: 900px;
-	margin: 100px auto; 
+	margin: 100px auto;
 	/* to  auto make container in middle  */
 	border-radius: 5px;
-}	
+}
 .container h3 {
 	text-align: center;
 	padding-top: 10px;
@@ -15,6 +18,7 @@
 .container h3 span {
 	font-weight: bold;
 	color: #a00c0c;
+	animation: shiftColor;
 }
 .container div {
 	float: left;
@@ -74,8 +78,8 @@
 .container .game .bottom-row div:nth-child(3) {
 	border-right: none;
 }
-.container .game .top-row div, 
-.container .game .center-row div, 
+.container .game .top-row div,
+.container .game .center-row div,
 .container .game .bottom-row div {
 
 	transition: .3s ease-in-out;
@@ -85,11 +89,11 @@
 .container .playertwo h2,
 .container .playerone img,
 .container .playertwo img {
-	transition: .3s ease-in-out;
+transition: .3s ease-in-out  
 }
 
-.container .game .top-row div:hover, 
-.container .game .center-row div:hover, 
+.container .game .top-row div:hover,
+.container .game .center-row div:hover,
 .container .game .bottom-row div:hover {
 
 	cursor: pointer;
@@ -217,12 +221,15 @@ body h1 {
 }
 
 
+iframe{
+	padding: 2px;
+}
 
 @keyframes shiftColor {
     from {
       color:( #A00C0C);
     }
-  
+
     to {
       color:( #25408A);
     }
